# ally

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  PROGRESS.md  README.md
.github/workflows/: deploy.yml
crates/: AGENTS.md
crates/app/: AGENTS.md  Cargo.toml
crates/app/src/: app_state.rs  main.rs  watchdog.rs
crates/app/src/extractors/: pagination.rs
crates/app/src/middleware/: cors.rs  error_handler.rs  request_id.rs
crates/app/src/routes/: admin.rs  asset_hub.rs  auth.rs  billing.rs  novel.rs  projects.rs  tasks.rs  user.rs
crates/app/src/worker/: consumer.rs  mod.rs  runtime.rs  task_context.rs
crates/app/src/worker/handlers/image/: character.rs  location.rs  modify.rs  panel.rs  shared.rs
crates/app/src/worker/handlers/text/: ai_create_character.rs  ai_modify_location.rs  ai_modify_shot_prompt.rs  analyze_global.rs  analyze_novel.rs  analyze_shot_variants.rs  asset_hub_ai_design.rs  asset_hub_ai_modify.rs  character_profile.rs  clips_build.rs  episode_split.rs  insert_panel.rs  mod.rs  reference_to_character.rs  regenerate_text.rs  screenplay_convert.rs  script_to_storyboard.rs  shared.rs  voice_analyze.rs
crates/app/src/worker/handlers/video/: lip_sync.rs
crates/app/src/worker/handlers/voice/: voice_design.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: episode_marker.rs  lib.rs  srt.rs
crates/core/src/api_config/: mod.rs
crates/core/src/auth/: jwt.rs  mod.rs  password.rs
crates/core/src/billing/: ledger.rs  mod.rs  money.rs  pricing.rs  reporting.rs  task.rs  types.rs
crates/core/src/capabilities/: catalog.rs  lookup.rs  mod.rs  types.rs  video_effective.rs
crates/core/src/config/: mod.rs
crates/core/src/crypto/: mod.rs
crates/core/src/db/: mod.rs  models.rs
crates/core/src/errors/: api_error.rs  codes.rs  mod.rs
crates/core/src/generators/: fal.rs  image.rs  mod.rs  video.rs  voice.rs
crates/core/src/image_cache/: mod.rs
crates/core/src/image_label/: mod.rs
crates/core/src/llm/: mod.rs
crates/core/src/media/: mod.rs
crates/core/src/prompt_i18n/: build_prompt.rs  catalog.rs  errors.rs  mod.rs  prompt_ids.rs  template_store.rs  types.rs
crates/core/src/runtime/: graph_executor.rs  mod.rs  pipeline_graph.rs  publisher.rs  quick_run_graph.rs  service.rs  task_bridge.rs  types.rs  workflow.rs
crates/core/src/system/: mod.rs
crates/server/: AGENTS.md  Cargo.toml
crates/server/src/: error.rs  main.rs
crates/server/src/extractors/: auth.rs
crates/server/src/middleware/: cors.rs  logging.rs  mod.rs
crates/server/src/routes/: admin.rs  asset_hub.rs  auth.rs  billing.rs  cos.rs  files.rs  media.rs  mod.rs  novel.rs  projects.rs  runs.rs  sse.rs  system.rs  task_submit.rs  user.rs
crates/watchdog/: Cargo.toml
crates/watchdog/src/: main.rs
crates/worker/: AGENTS.md  Cargo.toml
crates/worker/src/: consumer.rs  dispatcher.rs  heartbeat.rs  main.rs  task_context.rs
crates/worker/src/handlers/: mod.rs
deploy/: AGENTS.md  ally-server.service  ally-watchdog.service  ally-worker.service  deploy.sh  docker-compose.infra.yml  nginx-ally.conf  setup-server.sh
deploy/gray-release/: Caddyfile.percent-split  README.md  nginx-percent-split.conf
frontend/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: admin.ts  asset-hub.ts  auth.ts  client.ts  contracts.ts  novel.ts  projects.ts  runs.ts  sse.ts  tasks.ts  user.ts
frontend/src/compat/: NextLink.tsx  next-intl.ts  next-navigation.ts
frontend/src/components/: ConfirmDialog.tsx  LanguageSwitcher.tsx  Navbar.tsx  ProgressToast.tsx
frontend/src/components/asset-hub/: AddLocationModal.tsx  AssetGrid.tsx  CharacterCard.tsx  CharacterEditModal.tsx  FolderModal.tsx  FolderSidebar.tsx  LocationCard.tsx  LocationEditModal.tsx  index.ts  (+3 more)
frontend/src/contexts/: ToastContext.tsx  WorkspaceProvider.tsx  WorkspaceStageRuntimeContext.tsx
frontend/src/hooks/: use-task-sse.ts  useAuthSession.ts  useCurrentUser.ts  useHasAuthToken.ts
frontend/src/i18n/: index.ts  routing.ts
frontend/src/lib/: constants.ts  episode-marker-detector.ts  error-handler.ts  error-utils.ts  model-config-contract.ts  modes.ts  query-client.ts  query-keys.ts  srt.ts  storyboard-phases.ts  word-count.ts
frontend/src/routes/: Landing.tsx
frontend/src/styles/: animations.css  globals.css  ui-semantic-glass.css  ui-tokens-glass.css
messages/en/: admin.json  auth.json  common.json  errors.json  landing.json  nav.json  profile.json  smartImport.json
messages/zh/: admin.json  auth.json  common.json  errors.json  landing.json  nav.json  profile.json
migrations/: 0001_initial.sql  0002_run_runtime.sql  0003_graph_runtime_billing_alignment.sql  0004_tasks_billing_columns.sql  0005_billing_tables.sql  0006_simplify_billing.sql  AGENTS.md
reports/: api-performance-benchmark.json  api-performance-benchmark.md  api-runtime-compare.json  api-runtime-compare.md  backend-gap-report-2026-03-02.md  e2e-auth-flow.json  e2e-auth-flow.md  e2e-project-lifecycle.md  e2e-summary.json  e2e-summary.md  frontend-e2e-layer5-2026-03-04.md  page-api-validation-2026-03-02.md  prism-light-implementation-spec.md  sse-reconnect-smoke.json  sse-reconnect-smoke.md  worker-runtime-smoke.json  worker-runtime-smoke.md
reports/frontend-e2e/: e2e-frontend-summary.json  e2e-frontend-summary.md
reports/layer4-adjusted/: worker-runtime-smoke.json  worker-runtime-smoke.md
scripts/: AGENTS.md  api-contract-regression.mjs  api-performance-benchmark.mjs  api-performance-cases.sample.json  api-runtime-cases.sample.json  api-runtime-compare.mjs  e2e-admin-billing.mjs  e2e-asset-hub-advanced.mjs  e2e-asset-hub-crud.mjs  e2e-auth-flow.mjs  e2e-frontend.mjs  e2e-novel-advanced.mjs  e2e-novel-promotion.mjs  e2e-project-lifecycle.mjs  e2e-run-all.mjs  e2e-storage-sse.mjs  e2e-tasks-runs.mjs  e2e-user-config.mjs  sse-reconnect-smoke.mjs  worker-runtime-cases.sample.json  worker-runtime-smoke.mjs
standards/capabilities/: image-video.catalog.json
standards/pricing/: image-video.pricing.json  llm.pricing.json
(+380 files in other folders)
