[workspace]
members = [
  "crates/core",
  "crates/app",
]
resolver = "2"
default-members = ["crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ab_glyph = "0.2.31"
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
deadpool-redis = "0.22.0"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
image = { version = "0.25.9", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
imageproc = { version = "0.25.0", default-features = false }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
lru = "0.12.5"
once_cell = "1.21.3"
pbkdf2 = "0.12.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.12.2"
redis = { version = "0.32.7", features = ["aio", "connection-manager", "tokio-comp"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "rust_decimal", "json", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs", "compression-full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

[profile.dev]
debug = "line-tables-only"
