[package]
name = "ally"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ally"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
deadpool-redis.workspace = true
futures.workspace = true
http.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
uuid.workspace = true
zip.workspace = true
waoowaoo-core = { path = "../core" }
