[package]
name = "waoowaoo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
chrono.workspace = true
config.workspace = true
deadpool-redis.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
rand_core.workspace = true
redis.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
