[package]
name = "waoowaoo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
aws-credential-types = { version = "1.2.9", default-features = false }
aws-sdk-s3 = { version = "1.79.0", default-features = false, features = ["rt-tokio", "rustls"] }
chrono.workspace = true
config.workspace = true
deadpool-redis.workspace = true
dotenvy.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
pbkdf2.workspace = true
rand_core.workspace = true
redis.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
urlencoding = "2.1.3"
