[package]
name = "waoowaoo-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
deadpool-redis.workspace = true
futures.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
base64.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust_decimal.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true
waoowaoo-core = { path = "../core" }
