[package]
name = "waoowaoo-watchdog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
deadpool-redis.workspace = true
sqlx.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
waoowaoo-core = { path = "../core" }
